--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dudeshape</title>
+    <link rel="stylesheet" href="css/style.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.min.css">
-</head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <a class="logo" href="#">
+            <img
+              class="logo__img"
+              src="images/logo.png"
+              width="128"
+              height="50"
+              alt="Logo image."
+            />
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Home</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Products</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">About Us</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="user-nav">
+            <div class="user-nav__link">
+              <img
+                class="user-nav__icon"
+                src="images/icons/user.svg"
+                width="24"
+                height="24"
+                alt="Icon user."
+              />
+            </div>
+            <div class="user-nav__link">
+              <img
+                class="user-nav__icon"
+                src="images/icons/cart.svg"
+                width="24"
+                height="24"
+                alt="Icon cart."
+              />
+            </div>
+            <div class="user-nav__link">
+              <img
+                class="user-nav__icon"
+                src="images/icons/line.svg"
+                width="24"
+                height="24"
+                alt="Icon line."
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
-<body>
+    <main class="main"></main>
 
+    <footer class="footer"></footer>
 
-
-  <script src="js/main.min.js"></script>
-</body>
-
+    <script src="js/main.min.js"></script>
+  </body>
 </html>
