--- a/app/index.html
+++ b/app/index.html
@@ -175,7 +175,123 @@
               </div>
             </div>
           </div>
-          
+        </div>
+      </section>
+
+      <div class="partners">
+        <div class="container">
+          <div class="partners__inner">
+            <img
+              class="partners__img"
+              src="images/partner/airbnb.png"
+              alt="Partners logo"
+            />
+            <img
+              class="partners__img"
+              src="images/partner/hubspot.png"
+              alt="Partners logo"
+            />
+            <img
+              class="partners__img"
+              src="images/partner/google.png"
+              alt="Partners logo"
+            />
+            <img
+              class="partners__img"
+              src="images/partner/microsoft.png"
+              alt="Partners logo"
+            />
+            <img
+              class="partners__img"
+              src="images/partner/walmart.png"
+              alt="Partners logo"
+            />
+            <img
+              class="partners__img"
+              src="images/partner/fedex.png"
+              alt="Partners logo"
+            />
+          </div>
+        </div>
+      </div>
+
+      <section class="popular">
+        <div class="container">
+          <div class="popular__inner">
+            <div class="popular-top">
+              <h2 class="popular-top__title title">Our Porular Product</h2>
+              <div class="popular-top__box">
+                <p class="popular-top__descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy
+                </p>
+                <div class="popular-top__links">
+                  <a class="popular-top__link" href="#">
+                    Discover Our Products
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="popular-content">
+              <div class="popular-content__item">
+                <img
+                  class="popular-content__img"
+                  src="images/popular/1.jpg"
+                  alt="#"
+                  width="600"
+                  height="484"
+                />
+                <h3 class="popular-content__title">
+                  <a class="popular-content__title-link" href="#">
+                    Cosmetic products
+                  </a>
+                </h3>
+                <p class="popular-content__descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy
+                </p>
+                <div class="popular-content__box">
+                  <button class="popular-content__btn-buy" type="submit">
+                    Buy Now
+                  </button>
+                  <button class="popular-content__btn-add" type="submit">
+                    Add To Cart
+                  </button>
+                  <h4 class="popular-content__price">$120</h4>
+                </div>
+              </div>
+              <div class="popular-content__item">
+                <img
+                  class="popular-content__img"
+                  src="images/popular/2.jpg"
+                  alt="#"
+                  width="600"
+                  height="484"
+                />
+                <h3 class="popular-content__title">
+                  <a class="popular-content__title-link" href="#">
+                    Cosmetic products
+                  </a>
+                </h3>
+                <p class="popular-content__descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy
+                </p>
+                <div class="popular-content__box">
+                  <button class="popular-content__btn-buy" type="submit">
+                    Buy Now
+                  </button>
+                  <button class="popular-content__btn-add" type="submit">
+                    Add To Cart
+                  </button>
+                  <h4 class="popular-content__price">$120</h4>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
