--- a/app/index.html
+++ b/app/index.html
@@ -88,20 +88,23 @@
                   standard dummy
                 </p>
                 <form class="product-slider__form">
-                  <label class="product-slider__label" for="Search">
+                  <label class="product-slider__label">
                     <input
                       class="product-slider__input"
-                      type="text"
+                      type="search"
                       placeholder="Search..."
                     />
                   </label>
                   <button
-                    class="product-slider__btn"
+                    class="product-slider__search-btn"
                     type="submit"
                     aria-label="Button search."
                   ></button>
                 </form>
-                <button class="product-slider__button" type="submit">
+                <button
+                  class="product-slider__button shop-button"
+                  type="submit"
+                >
                   Shop Now
                 </button>
               </div>
@@ -122,20 +125,23 @@
                   standard dummy
                 </p>
                 <form class="product-slider__form">
-                  <label class="product-slider__label" for="Search">
+                  <label class="product-slider__label">
                     <input
                       class="product-slider__input"
-                      type="text"
+                      type="search"
                       placeholder="Search..."
                     />
                   </label>
                   <button
-                    class="product-slider__btn"
+                    class="product-slider__search-btn"
                     type="submit"
                     aria-label="Button search."
                   ></button>
                 </form>
-                <button class="product-slider__button" type="submit">
+                <button
+                  class="product-slider__button shop-button"
+                  type="submit"
+                >
                   Shop Now
                 </button>
               </div>
@@ -156,20 +162,23 @@
                   standard dummy
                 </p>
                 <form class="product-slider__form">
-                  <label class="product-slider__label" for="Search">
+                  <label class="product-slider__label">
                     <input
                       class="product-slider__input"
-                      type="text"
+                      type="search"
                       placeholder="Search..."
                     />
                   </label>
                   <button
-                    class="product-slider__btn"
+                    class="product-slider__search-btn"
                     type="submit"
                     aria-label="Button search."
                   ></button>
                 </form>
-                <button class="product-slider__button" type="submit">
+                <button
+                  class="product-slider__button shop-button"
+                  type="submit"
+                >
                   Shop Now
                 </button>
               </div>
@@ -294,6 +303,97 @@
           </div>
         </div>
       </section>
+
+      <div class="advantages">
+        <div class="container">
+          <div class="advantages__inner">
+            <div class="advantages__item">
+              <h2 class="advantages__item-num">100%</h2>
+              <p class="advantages__item-text">Organic Products</p>
+            </div>
+            <div class="advantages__item">
+              <h2 class="advantages__item-num">2M+</h2>
+              <p class="advantages__item-text">Yearly Sales</p>
+            </div>
+            <div class="advantages__item">
+              <h2 class="advantages__item-num">1.9M+</h2>
+              <p class="advantages__item-text">Happy Customar</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <div class="about__descr">
+              <h2 class="about__descr-title title">
+                The Perfect Beauty Of You
+              </h2>
+              <p class="about__descr-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book.
+              </p>
+              <p class="about__descr-text">
+                It has survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged. Lorem
+                Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <button class="about__descr-btn shop-button" type="submit">
+                Shop Now
+              </button>
+            </div>
+            <img
+              class="about__img"
+              src="images/about1.jpg"
+              alt="Product image"
+              width="600"
+              height="600"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="response-swiper">
+        <div class="container">
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  class="response__img"
+                  src="images/response/1.jpg.opdownload"
+                  alt="Customer photo."
+                  width="583"
+                  height="554"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="response__img"
+                  src="images/response/1.jpg.opdownload"
+                  alt="Customer photo."
+                  width="583"
+                  height="554"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="response__img"
+                  src="images/response/1.jpg.opdownload"
+                  alt="Customer photo."
+                  width="583"
+                  height="554"
+                />
+              </div>
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -302,7 +402,7 @@
           <div class="footer-top">
             <h3 class="footer-top__title">Subscribe to Get Our Letest News</h3>
             <form class="footer-top__form" action="#">
-              <label class="footer-top__label" for="Enter email">
+              <label class="footer-top__label">
                 <input
                   class="footer-top__input"
                   type="email"
@@ -356,7 +456,7 @@
                 <li class="footer-bottom__item">
                   <a
                     class="footer-bottom__links"
-                    href="mailto: oyasimnaeem@email.com"
+                    href="mailto:oyasimnaeem@email.com"
                   >
                     oyasimnaeem@email.com
                   </a>
