--- a/app/index.html
+++ b/app/index.html
@@ -17,18 +17,21 @@
           <img class="logo__img" src="images/logo.png" width="128" height="30" alt="Logo image." />
         </a>
         <nav class="menu">
+          <button class="menu__btn">
+            <span></span>
+          </button>
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Home</a>
+              <a class="menu__list-link" href="#home">Home</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Products</a>
+              <a class="menu__list-link" href="#products">Products</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">About Us</a>
+              <a class="menu__list-link" href="#about">About Us</a>
             </li>
             <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Contact Us</a>
+              <a class="menu__list-link" href="#contact">Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -47,8 +50,8 @@
     </div>
   </header>
 
-  <main class="main">
-    <section class="product-slider">
+  <!-- <main class="main">
+    <section class="product-slider" id="home">
       <div class="product-slider__inner">
         <div class="product-slider__slide" style="background-image: url('images/product-slider/1.jpg')">
           <div class="container">
@@ -135,7 +138,7 @@
       </div>
     </div>
 
-    <section class="popular">
+    <section class="popular" id="products">
       <div class="container">
         <div class="popular__inner">
           <div class="popular-top">
@@ -222,7 +225,7 @@
       </div>
     </div>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="container">
         <div class="about__inner">
           <div class="about__descr">
@@ -308,7 +311,7 @@
     </section>
   </main>
 
-  <footer class="footer">
+  <footer class="footer" id="contact">
     <div class="container">
       <div class="footer__inner">
         <div class="footer-top">
@@ -379,7 +382,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <script src="js/main.min.js"></script>
 </body>
