added header, product-slider adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
     </div>
   </header>
 
-  <!-- <main class="main">
+  <main class="main">
     <section class="product-slider" id="home">
       <div class="product-slider__inner">
         <div class="product-slider__slide" style="background-image: url('images/product-slider/1.jpg')">
@@ -85,7 +85,7 @@
               <p class="product-slider__text">
                 Lorem Ipsum is simply dummy text of the printing and
                 typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy
+                standard dummy Lorem, ipsum dolor.
               </p>
               <form class="product-slider__form">
                 <label class="product-slider__label">
@@ -108,7 +108,7 @@
               <p class="product-slider__text">
                 Lorem Ipsum is simply dummy text of the printing and
                 typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy
+                standard dummy Lorem
               </p>
               <form class="product-slider__form">
                 <label class="product-slider__label">
@@ -125,7 +125,7 @@
       </div>
     </section>
 
-    <div class="partners">
+    <!-- <div class="partners">
       <div class="container">
         <div class="partners__inner">
           <img class="partners__img" src="images/partner/airbnb.png" alt="Partners logo" />
@@ -384,7 +384,7 @@
     </div>
   </footer> -->
 
-  <script src="js/main.min.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 
 </html>
