--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
       </div>
     </section>
 
-    <!-- <div class="partners">
+    <div class="partners">
       <div class="container">
         <div class="partners__inner">
           <img class="partners__img" src="images/partner/airbnb.png" alt="Partners logo" />
@@ -340,13 +340,13 @@
             <h5 class="footer-bottom__title">Quick Link</h5>
             <ul class="footer-bottom__list">
               <li class="footer-bottom__item">
-                <a class="footer-bottom__links" href="#"> Home </a>
+                <a class="footer-bottom__links" href="#home"> Home </a>
               </li>
               <li class="footer-bottom__item">
-                <a class="footer-bottom__links" href="#"> Products </a>
+                <a class="footer-bottom__links" href="#products"> Products </a>
               </li>
               <li class="footer-bottom__item">
-                <a class="footer-bottom__links" href="#"> About Us </a>
+                <a class="footer-bottom__links" href="#about"> About Us </a>
               </li>
             </ul>
           </div>
@@ -382,9 +382,9 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
-    <script src="js/main.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
